<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <!-- Header -->
    <fragment
        android:id="@+id/header_fragment"
        android:name="com.example.m7animedex.fragment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header"/>

    <!-- Formulario -->
    <LinearLayout
        android:id="@+id/form_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="10dp"
            android:layout_marginBottom="16dp" />

        <!-- Username -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="10dp"
            android:layout_marginBottom="16dp" />

        <!-- Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Value"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginBottom="16dp" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginBottom="16dp" />
        <!--Or sign in with-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in_with"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <!-- Social Media Buttons -->
    <LinearLayout
        android:id="@+id/social_media_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/form_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/apple_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_apple"
            android:contentDescription="Apple Login"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/google_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_google"
            android:contentDescription="Google Login"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_facebook"
            android:contentDescription="Facebook Login"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/instagram_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_instagram"
            android:contentDescription="Instagram Login"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/x_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_x"
            android:contentDescription="Twitter Login"
            android:layout_margin="8dp" />
    </LinearLayout>

    <!-- Already have an account -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/social_media_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_already_have_an_account"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"/>
    </LinearLayout>

    <!-- Footer -->
    <fragment
        android:id="@+id/footer_fragment"
        android:name="com.example.m7animedex.FooterFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_footer"/>

</androidx.constraintlayout.widget.ConstraintLayout>