<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FooterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingVertical="8dp"
        android:gravity="center">

        <!-- Search -->
        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/search"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/search"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <!-- Home -->
        <LinearLayout
            android:id="@+id/layoutHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/rounded_home_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/home"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>

        <!-- Lists -->
        <LinearLayout
            android:id="@+id/layoutList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/lists" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/lists"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>